--- a/Index.html
+++ b/Index.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Job Portal</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Job Portal</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
+
 <body>
-  <header>
-    <div class="container">
-      <h1>Job Portal</h1>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="jobs.html">Jobs</a>
-        <a href="companies.html">Companies</a>
-        <a href="resume.html">Upload Resume</a>
-        <a href="salary.html">Salary</a>
-      </nav>
-    </div>
-  </header>
 
-  <section class="hero">
-    <div class="container">
-      <h2>Find Your Next Career Move</h2>
-      <p>Explore thousands of jobs. Upload your resume. Get hired faster.</p>
-      <div class="hero-buttons">
-        <a href="jobs.html" class="btn primary">Search Jobs</a>
-        <a href="resume.html" class="btn secondary">Upload Resume</a>
-      </div>
-    </div>
-  </section>
+    <header>
+        <div class="container">
+            <h1>Job Portal</h1>
+            <nav>
+                <a href="#">Home</a>
+                <a href="jobs.html">Jobs</a>
+                <a href="companies.html">Companies</a>
+                <a href="resume.html">Upload Resume</a>
+                <a href="login.html">Login</a>
+                <a href="signup.html">Sign Up</a>
+            </nav>
+        </div>
+    </header>
 
-  <section class="features">
-    <div class="container">
-      <h3>What You Can Do</h3>
-      <div class="feature-grid">
-        <div class="feature"><i class="fas fa-briefcase"></i><h4>Browse Jobs</h4><p>Find and apply to positions.</p></div>
-        <div class="feature"><i class="fas fa-file-upload"></i><h4>Upload Resume</h4><p>Track your resume strength.</p></div>
-        <div class="feature"><i class="fas fa-tasks"></i><h4>Track Applications</h4><p>Keep up with applications.</p></div>
-        <div class="feature"><i class="fas fa-building"></i><h4>Company Info</h4><p>Check company reviews.</p></div>
-        <div class="feature"><i class="fas fa-dollar-sign"></i><h4>Salary Insights</h4><p>Compare compensation data.</p></div>
-      </div>
-    </div>
-  </section>
+    <section class="hero">
+        <div class="container">
+            <h2>Find Your Next Career Move</h2>
+            <p>Explore thousands of jobs. Upload your resume. Get hired faster.</p>
+            <div class="hero-buttons">
+                <a href="#" class="btn primary">Search Jobs</a>
+                <a href="#" class="btn secondary">Upload Resume</a>
+            </div>
+        </div>
+    </section>
 
-  <footer><div class="container">&copy; 2025 Job Portal</div></footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Job Portal. All rights reserved.</p>
+        </div>
+    </footer>
+
 </body>
+
 </html>
