--- a/Index.html
+++ b/Index.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Portal</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Job Portal</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
-    <header>
-        <div class="container">
-            <h1>Job Portal</h1>
-            <nav>
-                <a href="#">Home</a>
-                <a href="jobs.html">Jobs</a>
-                <a href="companies.html">Companies</a>
-                <a href="resume.html">Upload Resume</a>
-                <a href="login.html">Login</a>
-                <a href="signup.html">Sign Up</a>
-            </nav>
-        </div>
-    </header>
+  <header>
+    <h1>Job Portal</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="jobs.html">Jobs</a>
+      <a href="companies.html">Companies</a>
+      <a href="resume.html">Upload Resume</a>
+      <a href="salary.html">Salary Insights</a>
+      <a href="application.html">Application Tracking</a>
+      <a href="login.html">Login</a>
+      <a href="signup.html">Sign Up</a>
+    </nav>
+  </header>
 
-    <section class="hero">
-        <div class="container">
-            <h2>Find Your Next Career Move</h2>
-            <p>Explore thousands of jobs. Upload your resume. Get hired faster.</p>
-            <div class="hero-buttons">
-                <a href="#" class="btn primary">Search Jobs</a>
-                <a href="#" class="btn secondary">Upload Resume</a>
-            </div>
-        </div>
-    </section>
+  <section class="hero">
+    <h2>Find Your Dream Job</h2>
+    <p>Connect with top companies and grow your career</p>
+    <div class="hero-buttons">
+      <a href="signup.html" class="btn primary">Get Started</a>
+      <a href="jobs.html" class="btn secondary">Browse Jobs</a>
+    </div>
+  </section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Job Portal. All rights reserved.</p>
-        </div>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Job Portal. All rights reserved.</p>
+  </footer>
 
 </body>
-
 </html>
